Fixed alignment of input fields in the Form Submission component.

--- a/catfish-ui/src/style.css
+++ b/catfish-ui/src/style.css
@@ -209,8 +209,6 @@ button:focus-visible {
         color: #4CAF50;
     }
     .fa-icon.add-option {
-        margin-left: 147px;
-        margin-top: 10px;
         height: 25px;
         width: 25px;
     }
